2015-02-05  Henri Doreau <henri.doreau@gmail.com>

	* CMakeLists.txt, src/CMakeLists.txt: Link against libomp to satisfy
	dependency chain.

2015-02-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (free_uploaded_file): Remove function.
	(apply_hosts_preferences): Use g_hash_table_destroy() directly.

2015-02-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0+beta7.

2015-02-11  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0+beta6 release.

	* CHANGES: Updated.

2015-02-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (comm_send_status): New function, moved from libraries.
	(attack_host): Update host scanning status, when finished or terminated.

2015-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Check if pkg-config was found. Abort and log a fatal
	error if it is not found.

2015-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Add check for required libgcrypt. It was already expected to be
	present (see usage of libgcrypt-config), but never checked for.

	* CMakeLists.txt: Try to find libgcrypt before calling
	libgcrypt-config. Raise SEND_ERROR if the library can not be found.
	Remove now obsolete TODO.

	* INSTALL: Note libgcrypt as prerequisite. Remove mention of gnutls
	since it is only an indirect dependency via openvas-libraries.

2015-01-19  Michael Wiegand <michael.wiegand@greenbone.net>

	Simplify handling of library flags in CMakeLists.txt files, thereby
	removing the need for clumsy workarounds.

	* CMakeLists.txt: Remove redundant queries of library flags which were
	already retrieved by CMake. Remove unnecessary aggregation of flags.

	* src/CMakeLists.txt: Set include directories with include_directories
	instead of target properties. Remove quotes in target_link_libraries
	so that CMake lists get expanded correctly.
